# HIP-OpTest

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run_demo.sh  run_log_softmax.sh
SoftmaxForwardV2/: SoftmaxForwardV2.cc  generator.py  log_softmax.py
WarpReduce/: WarpReduce.cc
common/: file_helper.h  generator.h  logging.cc  logging.h
hipEvent/: hipEvent.cc
python/: check.py  generator.py
